Make history database store the endianness of the page titles as metadata so when a single profile is shared among machines of different endianness the database doesn't get all garbled.  Bug 108134, patch by rbasch@mit.edu (Robert Basch), r=alecf, sr=bzbarsky